NLP_with_Disaster_Tweets_Capstone_2/etc/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serving-gateway-disaster-tweets-model
  labels:
    app: serving-gateway-disaster-tweets-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serving-gateway-disaster-tweets-model
  template:
    metadata:
      labels:
        app: serving-gateway-disaster-tweets-model
    spec:
      containers:
      - name: serving-gateway-disaster-tweets-model
        image: aletbm/serving-gateway-disaster-tweets-model:latest
        ports:
        - containerPort: 9696
