NLP_with_Disaster_Tweets_Capstone_2/etc/gateway-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serving-gateway-disaster-tweets-model
  labels:
    app: serving-gateway-disaster-tweets-model
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9696
      protocol: TCP
      name: http
  selector:
    app: serving-gateway-disaster-tweets-model

#kubectl apply -f ./etc/gateway-deployment-service.yaml
