NLP_with_Disaster_Tweets_Capstone_2/etc/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tf-serving-disaster-tweets-model
  labels:
    app: tf-serving-disaster-tweets-model
spec:
  ports:
    - port: 8500
      targetPort: 8500
      protocol: TCP
      name: http
  selector:
    app: tf-serving-disaster-tweets-model

#kubectl apply -f ./etc/model-service.yaml
