NLP_with_Disaster_Tweets_Capstone_2/etc/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/predict"
        backend:
          service:
            name: serving-gateway-disaster-tweets-model
            port:
              number: 80

#kubectl apply -f nginx-ingress.yaml
